# ielts-speaking-test-copilot

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  LICENSE  NOTICE  PRD-ielts-speaking-test-copilot.md  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  internal-rc.yml  security.yml
docs/development/: 00-roadmap.md  01-project-foundation.md  02-app-shell-theme.md  03-settings-config.md  04-deepseek-grading.md  05-media-processing.md  06-azure-speech-assessment.md  07-transcript-playback-sync.md  08-teacher-rag.md  09-testing-acceptance.md  10-assessor-ui-redesign.md  11-mvp5-improvements.md  12-corpus-rag-improvements.md  13-release-hardening.md  README.md
docs/release/: BACKUP_AND_ROLLBACK.md  KNOWN_LIMITATIONS.md  RC_CHECKLIST.md  REAL_SERVICE_ACCEPTANCE.md
scripts/: acceptance-safety.test.mjs  azure-speech-preflight.mjs  build-app.mjs  check-pnpm-audit.mjs  deepseek-acceptance.mjs  generate-azure-speech-sample.mjs  generate-wav-fixture.mjs  pnpm-audit-policy.test.mjs  security-check.mjs  verify-app-bundle.mjs  verify-config.mjs  verify-mvp4-readiness.mjs  verify-release-evidence.mjs  verify-versions.mjs  verify-wav-fixture.mjs  verify.mjs  zhipu-embedding-benchmark.mjs
scripts/lib/: acceptance-safety.mjs  pnpm-audit-policy.mjs
security/: audit-exceptions.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  constants.rs  corpus.rs  credentials.rs  endpoints.rs  errors.rs  grading.rs  lib.rs  main.rs  media.rs  speech.rs
src/app/: App.test.tsx  App.tsx  nav.ts  workspaceTypes.ts  workspaceUtils.ts
src/components/: Button.tsx  Card.tsx  Field.tsx  StatusPill.tsx
src/hooks/: useAppConfig.ts  useGradingWorkflow.ts  useMediaWorkflow.ts  useSessionHistory.test.tsx  useSessionHistory.ts  useTranscriptPlayback.ts
src/lib/: config.test.ts  config.ts  corpus.test.ts  corpus.ts  grading.ts  media.ts  speech.test.ts  speech.ts  tauri.test.ts  tauri.ts  transcript.test.ts  transcript.ts
src/styles/: global.css
src/test/: setup.ts
src/types/: config.ts  corpus.ts  errors.ts  grading.ts  media.ts  speech.ts
test-fixtures/audio/: azure-ready-1s.wav.sha256
(+17 files in other folders)
