[package]
name = "ielts-speaking-test-copilot"
version = "0.1.0"
description = "IELTS speaking test copilot"
authors = ["Codex"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ielts_speaking_test_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
