[package]
name = "ielts-speaking-test-copilot"
version = "0.1.0-rc.1"
description = "IELTS speaking test copilot"
authors = ["wHaleCircus27"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.95"

[lib]
name = "ielts_speaking_test_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = "0.41"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "2"
url = "2.5"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
rfd = { version = "0.15", default-features = false }
security-framework = "=3.7.0"

[dev-dependencies]
tempfile = "3"
